# affordance_template

./: README.md  affordance_template_r2.txt  affordance_template_valkyrie.txt  rosinstall-public.rosinstall
affordance_template_library/: package.xml
affordance_template_library/include/affordance_template_library/: affordance_template_generics.h
affordance_template_library/models/: door.dae  door_cut.stl  drill.stl  lever_handle.dae  r2_iva_hr.stl  torus.dae
affordance_template_library/robots/: atlas.yaml  fetch.yaml  r2.yaml  r2_roscontrol.yaml
affordance_template_library/templates/: cube.json  drill.json  iva_handrail.json  knob.json  lever_handle.json  pickandplace.json  test.json  wheel.json
affordance_template_markers/: CMakeLists.txt  package.xml
affordance_template_markers/src/: affordance_template.cpp
affordance_template_msgs/: CMakeLists.txt
affordance_template_msgs/msg/: DisplayObjectInfo.msg  EndEffectorConfig.msg  EndEffectorPoseData.msg  EndEffectorWaypointID.msg  RecognitionObjectConfig.msg  WaypointInfo.msg  WaypointViewMode.msg
affordance_template_msgs/srv/: AddAffordanceTemplate.srv  AddAffordanceTemplateTrajectory.srv  AffordanceTemplateExecuteCommand.srv  DeleteAffordanceTemplate.srv  DeleteRecognitionObject.srv  GetAffordanceTemplateServerStatus.srv  GetObjectPose.srv  GetRobotConfigInfo.srv  GetRunningAffordanceTemplates.srv  ScaleDisplayObject.srv
affordance_template_server/: CMakeLists.txt  package.xml
affordance_template_server/include/affordance_template_server/: interface.h  server.h
affordance_template_server/launch/: r2_upperbody.launch  r2_upperbody_new_exec.launch
affordance_template_server/src/: interface.cpp  test_exe.cpp
affordance_templates/affordance_template_library/: CMakeLists.txt
affordance_templates/affordance_template_library/models/: Valve.stl  cube.dae  door.stl  door_cut.dae  drill.dae  knob.dae  tskbd_panel_assembly_slot1.stl
affordance_templates/affordance_template_library/robots/: r2_upperbody.yaml
affordance_templates/affordance_template_library/src/: affordance_template_parser.cpp
affordance_templates/affordance_template_library/templates/: ISS_taskboard.json  cube.json  cylinder.json  door.json  sphere.json  wheel.json
affordance_templates/affordance_template_msgs/: package.xml
affordance_templates/affordance_template_msgs/action/: Execute.action  Plan.action
affordance_templates/affordance_template_msgs/msg/: AffordanceTemplateConfig.msg  AffordanceTemplateStatus.msg  GripperActionMap.msg  ObjectInfo.msg  RobotConfig.msg  ScaleDisplayObjectInfo.msg  WaypointTrajectory.msg
affordance_templates/affordance_template_msgs/srv/: AddRecognitionObject.srv  AffordanceTemplatePlanCommand.srv  GetAffordanceTemplateConfigInfo.srv  GetAffordanceTemplateStatus.srv  GetRecognitionObjectConfigInfo.srv  LoadRobotConfig.srv  SaveAffordanceTemplate.srv  SetAffordanceTemplatePose.srv  SetAffordanceTemplateTrajectory.srv  SetObjectPose.srv  SetWaypointViewModes.srv
nasa_r2_common/nasa_r2_common_msgs/: .gitignore  CMakeLists.txt
nasa_r2_common/nasa_r2_common_msgs/msg/: CommandStatus.msg  ControllerJointSettings.msg  ControllerPoseSettings.msg  ForceControlAxis.msg  ForceControlAxisArray.msg  Gains.msg  JointCapability.msg  JointCommand.msg  JointControlCalibrationMode.msg  JointControlClearFaultMode.msg  JointControlCoeffState.msg  JointControlCommandMode.msg  JointControlData.msg  JointControlDataArray.msg  JointControlMode.msg  JointStatus.msg  JointTrajectoryReplan.msg  LabeledControllerJointSettings.msg  LabeledControllerPoseSettings.msg  LabeledGains.msg  LabeledGripperPositionCommand.msg  LabeledJointControlDataArray.msg  LabeledJointState.msg  LabeledJointTrajectory.msg  LabeledPoseTrajectory.msg  LabeledTrajectoryMonitorFactors.msg  MappedType.msg  Modes.msg  Parameter.msg  PoseState.msg  PoseTrajectory.msg  PoseTrajectoryPoint.msg  PoseTrajectoryReplan.msg  PowerState.msg  PriorityArray.msg  ReplanType.msg  SetParameterRequest.msg  SetParameterResponse.msg  SystemCore.msg  SystemStatus.msg  (+6 more)
nasa_r2_simulator/r2_controllers_ros/: CMakeLists.txt  mainpage.dox  manifest.xml
nasa_r2_simulator/r2_controllers_ros/src/: R2RosArbiter.cpp  R2RosTrajectoryManager.cpp  R2RosTreeFk.cpp  R2RosTreeId.cpp  r2_controller_node.cpp
robot_interaction_tools/interactive_controls/: CMakeLists.txt  package.xml
robot_interaction_tools/interactive_controls/config/: default_tolerances.yaml  fetch.yaml  r2.yaml  r2_upperbody.yaml  region_tolerances.yaml
robot_interaction_tools/interactive_controls/launch/: fetch.launch  r2.launch  r2_upperbody.launch
robot_interaction_tools/interactive_controls/src/: interactive_controls.cpp
robot_interaction_tools/moveit_planner/: CMakeLists.txt  moveit_planner.xml  package.xml
robot_interaction_tools/moveit_planner/src/: moveit_planner.cpp
robot_interaction_tools/planner_interface/: CMakeLists.txt  package.xml
robot_interaction_tools/planner_interface/doc/: manifest.yaml
robot_interaction_tools/planner_interface/src/: planner_interface.cpp  tolerance_util.cpp
robot_interaction_tools/planner_interface/srv/: SetObstacles.srv
robot_interaction_tools/rit_utils/: CMakeLists.txt  package.xml
robot_interaction_tools/rit_utils/launch/: robot_display.launch
robot_interaction_tools/rit_utils/src/: predictive_robot_display.cpp  rdf_model.cpp  test_robot_display.cpp
robot_interaction_tools/robot_interaction_tools/: CMakeLists.txt  package.xml
robot_interaction_tools/robot_interaction_tools_msgs/: CMakeLists.txt  package.xml
robot_interaction_tools/robot_interaction_tools_msgs/msg/: FootstepData.msg  FootstepDataArray.msg  JointMask.msg  (+1 more)
robot_interaction_tools/rviz_interactive_controls_panel/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_affordance_template_panel/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_affordance_template_panel/src/: controls.cpp  rviz_affordance_template_panel.cpp  rviz_client.cpp  server_status_monitor.cpp  util.cpp  waypoint_display.cpp
rviz_affordance_template_panel/ui/: rviz_affordance_template_panel.ui
(+369 files in other folders)
