<?xml version="1.0"?>
<package>
  <name>affordance_template_markers</name>
  <version>0.0.0</version>
  <description>The package holding affordance template markers for use in rviz.</description>

  <maintainer email="swhart@traclabs.com">Stephen Hart</maintainer>
  <maintainer email="seth@traclabs.com">Seth Gee</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>affordance_template_msgs</build_depend>
  <build_depend>affordance_template_library</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>planner_interface</build_depend>
  <build_depend>end_effector_helper</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>affordance_template_msgs</run_depend>
  <run_depend>affordance_template_library</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>planner_interface</run_depend>
  <run_depend>end_effector_helper</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
  </export>

</package>
