<?xml version="1.0"?>
<package>
  <name>affordance_template_server</name>
  <version>0.0.1</version>
  <description>Package that holds the server for affordance templates.</description>

  <maintainer email="swhart@traclabs.com">Stephen Hart</maintainer>
  <maintainer email="seth@traclabs.com">Seth Gee</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>affordance_template_msgs</build_depend>
  <build_depend>affordance_template_markers</build_depend>
  <build_depend>affordance_template_library</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf</build_depend>
  
  <!-- <build_depend>visualization_msgs</build_depend> -->

  <run_depend>roscpp</run_depend>
  <run_depend>affordance_template_msgs</run_depend>
  <run_depend>affordance_template_markers</run_depend>
  <run_depend>affordance_template_library</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>tf</run_depend>
  
  <!-- <run_depend>robot_interaction_tools</run_depend>  
  <run_depend>visualization_msgs</run_depend> -->

</package>