<?xml version="1.0"?>
<package>
  <name>affordance_template_msgs</name>
  <version>0.0.0</version>
  <description>The affordance_template_msgs package</description>

  <maintainer email="swhart@traclabs.com">Stephen Hart</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>