<?xml version="1.0"?>
<package>
  <name>interactive_controls</name>
  <version>0.0.0</version>
  <description>The interactive_controls package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="swhart@traclabs.com">Stephen Hart</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>robot_interaction_tools_msgs</build_depend>
  <build_depend>planner_interface</build_depend>
  <build_depend>moveit_planner</build_depend>
  <build_depend>end_effector_helper</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>rit_utils</build_depend>

  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>robot_interaction_tools_msgs</run_depend>
  <run_depend>planner_interface</run_depend>
  <run_depend>moveit_planner</run_depend>
  <run_depend>end_effector_helper</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>rit_utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
