<?xml version="1.0"?>
<package>
  <name>moveit_planner</name>
  <version>0.0.0</version>
  <description>The moveit_planner package</description>

  <maintainer email="swhart@traclabs.com">Stephen Hart</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>planner_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>shape_msgs</build_depend>

  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>planner_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>shape_msgs</run_depend>

  <export>
    <planner_interface plugin="${prefix}/moveit_planner.xml" />
  </export>

</package>