<?xml version="1.0"?>
<package>
  <name>rit_utils</name>
  <version>0.0.0</version>
  <description>The utils package for Robot Interaction Tools</description>

  <maintainer email="seth@traclabs.com">Seth Gee</maintainer>

  <license>BSD</license>

 <buildtool_depend>catkin</buildtool_depend>
 <buildtool_depend>pkg-config</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>srdfdom</build_depend>
<build_depend>urdfdom</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>kdl_parser</build_depend>

<run_depend>roscpp</run_depend>
<run_depend>srdfdom</run_depend>
<run_depend>urdfdom</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>kdl_parser</run_depend>

</package>
